Styled the see code link

--- a/index.html
+++ b/index.html
@@ -504,9 +504,12 @@
       </p>
       <div class="top-crack">
         <div class="top-crack__top-filler"></div>
-        <h3 class="top-crack__text">
+        <a
+          href="https://github.com/joskuapk/joskuapk.github.io"
+          class="top-crack__text"
+        >
           Click or tap to see the code of this website
-        </h3>
+        </a>
         <img class="bottom-crack" src="svg/bottom-crack.svg" alt="" />
       </div>
       <div class="project__imgs" data-aos="zoom-in">
