--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <p>
           I don't know who you are... <br />
           I don't know what you want... <br /><br />
-          If you are looking for ugly soltions I can tell you I don't have anyy,
+          If you are looking for ugly solutions I can tell you I don't have any,
           but what I do have are a very particular set of skills....
           <br /><br />
           Skills I have acquired over a very long career. Skills that make me a
