--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
         <i class="fa-solid fa-gears fa-1x"></i> Projects
       </h2>
       <p class="projects__text indent" data-aos="fade-up-right">
-        Many live projects jet to come!
+        Many live projects yet to come!
       </p>
       <div class="top-crack">
         <div class="top-crack__top-filler"></div>
