Added Flask App

--- a/index.html
+++ b/index.html
@@ -500,6 +500,13 @@
       <h2 class="projects__title indent" id="projects" data-aos="fade-up-right">
         <i class="fa-solid fa-gears fa-1x"></i> Projects
       </h2>
+      <ul>
+        <li class="list__item">
+          <a href="https://joskuaflaskapp.herokuapp.com/"
+            >Flask App Demo: a simple app with CRUD operations!</a
+          >
+        </li>
+      </ul>
       <p class="projects__text indent" data-aos="fade-up-right">
         Many live projects jet to come!
       </p>
